--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,14 +4,16 @@ version: '3.8'
 services:
   redis:
     image: "redis:alpine"
+    container_name: redis-container
     ports:
       - "6379:6379"
 
   app:
+    container_name: flask-container
     build: .
     ports:
       - "5000:5000"
-    environment:
-      - REDIS_URL=redis://redis:6379/0
+    env_file:
+      - .env
     depends_on:
       - redis
