--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,10 +10,15 @@ services:
 
   app:
     container_name: flask-container
-    build: .
+    restart: always
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "5000:5000"
     env_file:
       - .env
     depends_on:
       - redis
+    volumes:
+      - ./:/app
