--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ click==8.1.7
 Flask==3.0.3
 Flask-Caching==2.3.0
 flask-restx==1.3.0
+flatbuffers==24.3.25
 idna==3.7
 importlib_resources==6.4.0
 itsdangerous==2.2.0
@@ -16,6 +17,8 @@ Jinja2==3.1.4
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 MarkupSafe==2.1.5
+openmeteo_requests==1.3.0
+openmeteo_sdk==1.14.1
 python-dotenv==1.0.1
 pytz==2024.1
 redis==5.0.8
